--- a/package.json
+++ b/package.json
@@ -1,7 +1,9 @@
 {
   "type": "module",
   "dependencies": {
-    "express": "^4.21.2"
+    "express": "^4.21.2",
+    "pino": "^9.7.0",
+    "pino-http": "^10.4.0"
   },
   "name": "acct-handler",
   "version": "1.1.2",
